--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <td>
 <div style="margin-top:12%;">
 <h1 align="center">
-<a href="{% url 'lista' %}">
+<a href="https://ey-ka.github.io/lista">
 <p style="font-style:italic">Ленинградские сказки</p>
  <p style="font-style:italic">и истории</p>
  <p style="font-style:italic">от Екатерины</p>
