--- a/lista.html
+++ b/lista.html
@@ -5,20 +5,19 @@
 <meta charset="utf-8" />
 <title aligh="center">Оглавление</title>
 </head>
-<body bgcolor="#20B2AA"
-background="blog.jpg">
+<body bgcolor="#20B2AA">
 <td>
 <div style="margin-top:5%;">
 <h1 align="center">Оглавление</h1>
-<a href="{% url 'biblioteca_app:l1' %}">
+<a href="https://ey-ka.github.io/l1">
 <h1 style="font-style:italic; color: #000000">Летучая мышь</h1>
 </a>
 <p></p>
-<a href="{% url 'biblioteca_app:l2' %}">
+<a href="https://ey-ka.github.io/l2">
 <h1 style="font-style:italic; color: #000000">Деревенские напевы</h1>
 </a>
 <p></p>
-<a href="{% url 'biblioteca_app:l3' %}">
+<a href="https://ey-ka.github.io/l3">
 <h1 style="font-style:italic; color: #000000">Приключения кота Маркиза</h1>
 </a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
