--- a/lista.html
+++ b/lista.html
@@ -20,6 +20,14 @@
 <a href="https://ey-ka.github.io/l3">
 <h1 style="font-style:italic; color: #000000">Приключения кота Маркиза</h1>
 </a>
+<p></p>
+<a href="https://ey-ka.github.io/l4">
+<h1 style="font-style:italic; color: #000000">Приключение на Чёрном море</h1>
+</a>
+<p></p>
+<a href="https://ey-ka.github.io/l5">
+<h1 style="font-style:italic; color: #000000">Три подруги(повесть)</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
