--- a/lista.html
+++ b/lista.html
@@ -28,6 +28,10 @@
 <a href="https://ey-ka.github.io/l5">
 <h1 style="font-style:italic; color: #000000">Три подруги(повесть)</h1>
 </a>
+<p></p>
+<a href="https://ey-ka.github.io/l6">
+<h1 style="font-style:italic; color: #000000">Воздушный змей.(детский рассказ)</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
