--- a/lista.html
+++ b/lista.html
@@ -30,7 +30,7 @@
 </a>
 <p></p>
 <a href="https://ey-ka.github.io/l6">
-<h1 style="font-style:italic; color: #000000">Воздушный змей.(детский рассказ)</h1>
+<h1 style="font-style:italic; color: #000000">Воздушный змей(детский рассказ)</h1>
 </a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
