--- a/lista.html
+++ b/lista.html
@@ -32,6 +32,9 @@
 <a href="https://ey-ka.github.io/l6">
 <h1 style="font-style:italic; color: #000000">Воздушный змей(детский рассказ)</h1>
 </a>
+<a href="https://ey-ka.github.io/l7">
+<h1 style="font-style:italic; color: #000000">Ежики морские, рыбки золотые</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
