--- a/lista.html
+++ b/lista.html
@@ -35,6 +35,9 @@
 <a href="https://ey-ka.github.io/l7">
 <h1 style="font-style:italic; color: #000000">Ежики морские, рыбки золотые</h1>
 </a>
+<a href="https://ey-ka.github.io/l8">
+<h1 style="font-style:italic; color: #000000">Летние каникулы</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
