--- a/lista.html
+++ b/lista.html
@@ -38,6 +38,10 @@
 <a href="https://ey-ka.github.io/l8">
 <h1 style="font-style:italic; color: #000000">Летние каникулы</h1>
 </a>
+</a>
+<a href="https://ey-ka.github.io/l9">
+<h1 style="font-style:italic; color: #000000">Непростые судьбы</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
