--- a/l9.html
+++ b/l9.html
@@ -483,7 +483,7 @@
 <h3>- Простите как вас зовут, спросила Даша.</h3><p></p>
 <h3>- Георгий Иванович.</h3><p></p>
 <h3>- Рита быстро сообщила, что пора придти на помощь.</h3><p></p>
-<h3> Работаем сообщил по рации Федор. В окно кабинета влетели спецназовцы. Все произошло быстро. Но Гоша успел выскочить в другую комнату. Там был выход на лестницу. Рита так же выскочила за ним. Извини дружок есть разговор. Она дала ему в челюсть. Но Гоша удержался на ногах. И ударил в пустоту. Он паула Рите в поддых. Тут ему не было равных. Он мог с закрытами глазами драться с соперником. Этому их учили в спец - школе. Привет Риточка. Ты всегда была шумной девушкой.</h3><p></p>
+<h3> Работаем сообщил по рации Федор. В окно кабинета влетели спецназовцы. Все произошло быстро. Но Гоша успел выскочить в другую комнату. Там был выход на лестницу. Рита так же выскочила за ним. Извини дружок есть разговор. Она дала ему в челюсть. Но Гоша удержался на ногах. И ударил в пустоту. Он попал Рите в поддых. Тут ему не было равных. Он мог с закрытами глазами драться с соперником. Этому их учили в спецшколе. Привет Риточка. Ты всегда была шумной девушкой.</h3><p></p>
 <h3>- Рита сделала выпад и попала ему в челюсть. Гоша пошатнулся и хотел ответить. Но не смог. Кто- то его вырубил. Я не опоздала спросила Даша. Рита обняла ее. Ты как всегда вовремя. Рита вдруг упала. Даша по телефону сообщила Володе что нужен врач. Риту отвезли в операционную. Внизу всех ждала Даниэль. </h3><p></p>
 <h3>- Даша  сказала что Рита в реанимации. Дани быстро побежала туда и попросилась разрешить ей присутствовать. Операция прошла успешно. Гоша успел ее ранить ножом. Но все обошлось. После операции Дани попросила разрешения поговорить с Сергеем.</h3><p></p>
 <h3> - Где моя дочь, спросила она.</h3><p></p>
