--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 </h1>
 </div>
 </td>
+<script type="text/javascript" src="https://uguide.ru/js/script/snowcursor.min.js"></script>
 </body>
 </html>
