--- a/lista.html
+++ b/lista.html
@@ -45,5 +45,6 @@
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
+<script type="text/javascript" src="https://uguide.ru/js/script/snowcursor.min.js"></script>
 </body>
 </html>
