--- a/lista.html
+++ b/lista.html
@@ -4,6 +4,44 @@
 <head>
 <meta charset="utf-8" />
 <title aligh="center">Оглавление</title>
+<style>
+* {
+margin: 0;
+padding: 0;
+}
+
+body {
+background-image: url('https://sitespectr.ru/test/sneg/img/snow2.png');
+
+-webkit-animation: snow 20s linear infinite;
+
+-moz-animation: snow 20s linear infinite;
+-ms-animation: snow 20s linear infinite;
+animation: snow 20s linear infinite;
+}
+
+@keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+
+@-moz-keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+
+@-webkit-keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+50% {background-color:#b4cfe0;}
+100% {background-position: 500px 1000px, 400px 400px, 300px 300px; 
+background-color:#6b92b9;}
+}
+
+@-ms-keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+</style>
 </head>
 <body bgcolor="#20B2AA">
 <td>
