--- a/lista.html
+++ b/lista.html
@@ -80,6 +80,9 @@ background-color:#6b92b9;}
 <a href="https://ey-ka.github.io/l9">
 <h1 style="font-style:italic; color: #000000">Непростые судьбы</h1>
 </a>
+<a href="https://ey-ka.github.io/l10">
+<h1 style="font-style:italic; color: #000000">Льняной букетик(сказка-фэнтези)</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
