--- a/lista.html
+++ b/lista.html
@@ -86,6 +86,9 @@ background-color:#6b92b9;}
 <a href="https://ey-ka.github.io/l11">
 <h1 style="font-style:italic; color: #000000">История фотографии</h1>
 </a>
+<a href="https://ey-ka.github.io/l12">
+<h1 style="font-style:italic; color: #000000">Неотправленные письма</h1>
+</a>
 <a href="https://vk.com/id34907896">Связаться с автором</a>
 </div>
 </td>
